<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.fabio.exercicio1.MainActivity4">

    <TextView android:text="@string/q_sexo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>

    <RadioGroup
        android:id="@+id/radio_group_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:text="@string/m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:text="@string/f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <Button
        android:id="@+id/finish_id"
        android:layout_gravity="center_horizontal"
        android:text="@string/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
